--- a/nojs.html
+++ b/nojs.html
@@ -1,7 +1,8 @@
 <html lang="eng">
 <head>
 	<meta charset="utf-8"/>
-	<title>web-portfolio</title>
+	<title>Blake Karbon's Web Portfolio</title>
+	<link rel="icon" href="res/img/favicon.png" sizes="128x128" type="image/png">
 </head>
 <body>
 	<noscript>This better be showing up!</noscript>
