--- a/gui.html
+++ b/gui.html
@@ -1,7 +1,8 @@
 <html lang="eng">
 <head>
 	<meta charset="utf-8"/>
-	<title>web-portfolio</title>
+	<title>Blake Karbon's Web Portfolio</title>
+	<link rel="icon" href="res/img/favicon.png" sizes="128x128" type="image/png">
 </head>
 <body>
 	<noscript>You are extra cool because whatever you are viewing this on does not support javascript! Click <a href='nojs.html'>here</a> to go to the pure HTML site suitable for terminals.</noscript>
